--- a/templates/jeux/qui_suis_je/start.html.twig
+++ b/templates/jeux/qui_suis_je/start.html.twig
@@ -14,8 +14,11 @@
             <div class="position-absolute top-0 end-0 d-flex">
                 <button class="btn btn-dark d-flex align-items-center justify-content-center"
                         style="width: 2em; height: 2em; margin-top: 5vh;" onclick="window.location = {{ path('app_jeux') }}" title="Retourner au menu des jeux"><i class="fa fa-home"></i></button>
+                <button class=" ms-2 btn btn-dark d-flex align-items-center justify-content-center" id="btn_replay"
+                        style="width: 2em; height: 2em; margin-top: 5vh;" title="Rejouer"><i class="fa fa-arrow-rotate-right"></i></button>
                 <button class=" ms-2 btn btn-dark d-flex align-items-center justify-content-center" id="btn_abandon"
                         style="width: 2em; height: 2em; margin-top: 5vh;" title="Abandonner"><i class="fa fa-flag"></i></button>
+
 
             </div>
             <div class="align-self-center d-flex align-items-center" style="height: 5vh; margin-top: 5vh;">
@@ -48,6 +51,10 @@
                 </div>
             </div>
         </div>
+
+        <div class="alert alert-danger alert-perdu fade" role="alert" id="alert-perdu">
+            Mauvaise réponse ! Veuillez réessayer.
+        </div>
     </div>
 
     <template id="template_contrat">
@@ -64,8 +71,8 @@
     <template id="template_recherche_joueur">
         <tr>
             <td class="d-flex align-items-center ps-3">
-                <img src="https://www.ligue1.fr/-/media/Project/LFP/shared/Images/Players/2021-2022/57/62557.jpg"
-                     alt="GUENDOUZ'" class="pe-3 img_joueur" style="max-height: 3.5em;">
+                <img src=""
+                     alt="'" class="pe-3 img_joueur" style="max-height: 3.5em;">
                 <p class="nom_joueur"></p>
             </td>
         </tr>
@@ -80,13 +87,11 @@
     </template>
 
     <!-- Modal -->
-    <div class="modal fade" id="modal_win" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
+    <div class="modal fade" id="modal_win" data-bs-backdrop="static" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header border-secondary bg-dark">
                     <h5 class="modal-title text-white">Bien joué !!</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
                 </div>
                 <div class="modal-body bg-dark">
                     <div style="width:100%;height:0;padding-bottom:100%;position:relative;">
@@ -105,52 +110,43 @@
         </div>
     </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="modal_lose" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header border-secondary bg-dark">
-                    <h5 class="modal-title text-white">Pour marquer il faut tirer, mais c'est pas ce qu'on a vue !
-                        Essaye encore !</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
-                </div>
-                <div class="modal-body bg-dark">
-                    <div style="width:100%;height:0;padding-bottom:100%;position:relative;">
-                        <iframe src="https://giphy.com/embed/fzgv5RQdUX4cnE91Zq" width="100%" height="100%"
-                                style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="modal_erreur" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
+    <div class="modal fade" id="modal_erreur" data-bs-backdrop="static"  tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog  modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header border-secondary bg-dark">
                     <h5 class="modal-title text-white">Une erreur est parvenue !</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
                 </div>
                 <div class="modal-body bg-dark" id="message_erreur">
+                </div>
+                <div class="modal-footer border-secondary bg-dark">
+                    <button type="button" class="btn btn-outline-light"
+                            onclick="window.location.href = {{ path('app_jeux') }}">Retour à l'accueil
+                    </button>
+                    <button type="button" class="btn btn-outline-light" onclick="window.location.reload()">Rejouer
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="modal_abandon" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
+    <div class="modal fade" id="modal_abandon" data-bs-backdrop="static"  tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog  modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header border-secondary bg-dark">
                     <h5 class="modal-title text-white">Pas comme ça, pas maintenant, pas après tout ce que tu as fait !</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
                 </div>
                 <div class="modal-body bg-dark text-white">
                     <img id="img_joueur_abandon" src="" alt="" style="max-height: 10em;">&nbsp;Il s'agissait de <strong id="nom_joueur_abandon"></strong>
+                </div>
+                <div class="modal-footer border-secondary bg-dark">
+                    <button type="button" class="btn btn-outline-light"
+                            onclick="window.location.href = {{ path('app_jeux') }}">Retour à l'accueil
+                    </button>
+                    <button type="button" class="btn btn-outline-light" onclick="window.location.reload()">Rejouer
+                    </button>
                 </div>
             </div>
         </div>
