--- a/templates/jeux/qui_suis_je/start.html.twig
+++ b/templates/jeux/qui_suis_je/start.html.twig
@@ -11,15 +11,13 @@
 
     <div class="bg-dark text-white body-jeu">
         <div class="container d-flex flex-column position-relative container-jeu">
-            <div class="position-absolute top-0 end-0 d-flex">
-                <button class="btn btn-dark d-flex align-items-center justify-content-center"
+            <div class="position-absolute top-0 end-0 d-flex" style="height: 5vh">
+                <button class="btn btn-dark d-flex align-items-center justify-content-center icone-in-game"
                         style="width: 2em; height: 2em; margin-top: 5vh;" onclick="window.location = {{ path('app_jeux') }}" title="Retourner au menu des jeux"><i class="fa fa-home"></i></button>
-                <button class=" ms-2 btn btn-dark d-flex align-items-center justify-content-center" id="btn_replay"
+                <button class=" ms-2 btn btn-dark d-flex align-items-center justify-content-center icone-in-game" id="btn_replay"
                         style="width: 2em; height: 2em; margin-top: 5vh;" title="Rejouer"><i class="fa fa-arrow-rotate-right"></i></button>
-                <button class=" ms-2 btn btn-dark d-flex align-items-center justify-content-center" id="btn_abandon"
+                <button class=" ms-2 btn btn-dark d-flex align-items-center justify-content-center icone-in-game" id="btn_abandon"
                         style="width: 2em; height: 2em; margin-top: 5vh;" title="Abandonner"><i class="fa fa-flag"></i></button>
-
-
             </div>
             <div class="align-self-center d-flex align-items-center titre-jeu">
                 <h1 class="fw-bold text-shadow-white">Qui Suis-Je ?</h1>
